--- a/app/about.html
+++ b/app/about.html
@@ -311,7 +311,7 @@
         <div class="container">
 
           <div class="callback__inner">
-            <div class="callback__image">
+            <div class="callback__image callback__image--without-blur">
               <img src="img/callback-image.png" alt="" />
             </div>
             <div class="callback__description">
