--- a/app/filial.html
+++ b/app/filial.html
@@ -605,6 +605,7 @@
 
         <section class="gallery gallery--grid pt">
           <div class="container">
+            <div class="gallery__title t2">Отзывы наших постояльцев</div>
             <div class="gallery__inner">
               <a href="img/banner.jpg" data-fancybox="filial-gallery">
                 <picture>
@@ -814,7 +815,7 @@
         <div class="container">
 
           <div class="callback__inner">
-            <div class="callback__image">
+            <div class="callback__image callback__image--without-blur">
               <img src="img/callback-image.png" alt="" />
             </div>
             <div class="callback__description">
